# tiny-glsl-optimizer

./: CMakeLists.txt  README.md
include/optimizer/: optimizer.h
src/code/: GlslConvert.cpp  GlslConvert.h  ir_print_glsl_visitor.cpp  ir_print_glsl_visitor.h  ir_print_ir_visitor.h  optimizer.cpp
